<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#192B23"
            app:titleCentered="true"
            android:textAlignment="center"
            app:title="Layouts App" />

    </com.google.android.material.appbar.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/linearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_button_text" />

    <Button
        android:id="@+id/constraintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout_button_text" />

    <Button
        android:id="@+id/relativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout_button_text" />

    <Button
        android:id="@+id/gridButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout_button_text" />

    <Button
        android:id="@+id/tableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_layout_button_text" />

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>